# matslisp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  error_handling.c  error_handling.h  functions.c  functions.h  io.c  io.h  main.c  memory.c  memory.h  object.c  object.h  strings.c  strings.h
tests/: CMakeLists.txt  main.cpp  test_memory.cpp  test_object.cpp
